# llm_inference_benchmarking

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTERVIEW.md  README.md  TEACHING.md  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: aws.yaml  aws_dimensions.yaml  colab.yaml  mock.yaml  smoke.yaml
notebooks/: colab_validation.ipynb
results_published/cloud_20260615T014026Z/: oracle_crosscheck.txt
results_published/cloud_20260615T014026Z/2026-06-14T23-55-58Z_3f697b/: run_manifest.json  summary.csv
results_published/cloud_20260615T014126Z/: oracle_crosscheck.txt
results_published/cloud_20260615T014126Z/2026-06-14T23-55-58Z_3f697b/: summary.json
results_published/cloud_20260615T014126Z/2026-06-15T01-14-49Z_372763/: summary.csv
results_published/cloud_20260615T014126Z/2026-06-15T01-19-20Z_393d65/: summary.csv  summary.json
results_published/cloud_a100_40gb/: README.md
results_published/cloud_a100_40gb/2026-06-15T01-14-49Z_372763/: run_manifest.json  summary.json
results_published/cloud_a100_40gb/2026-06-15T01-19-20Z_393d65/: run_manifest.json
scripts/: env_manifest.sh  make_pdf.sh  run_aws.sh  run_bench_serve_oracle.sh  run_cloud.sh  run_mock.sh  serve_vllm.sh
src/gpubench/: __init__.py  cli.py  config.py  loadgen.py  metrics.py  mock_server.py  orchestrator.py  reporter.py  schema.py  serving.py  telemetry.py
tests/: conftest.py  test_loadgen.py  test_memory_and_serving.py  test_metrics.py  test_reporter.py  test_telemetry.py
(+72 files in other folders)
